objects/Slide__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Slides</relationshipLabel>
        <relationshipName>Slides</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting</label>
        <referenceTo>Meeting__c</referenceTo>
        <relationshipLabel>Slides</relationshipLabel>
        <relationshipName>Slides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Microsite_ID__c</fullName>
        <label>Microsite ID</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Presentation ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slide_ID__c</fullName>
        <externalId>true</externalId>
        <label>Slide ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Slide</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Slide Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>